@@ -75,8 +75,14 @@ bool CGUIWindowVideoFiles::OnMessage(CGUIMessage& message)
       // try to open the destination path
       if (!strDestination.IsEmpty())
       {
+        // open root
+        if (strDestination.Equals("$ROOT"))
+        {
+          m_vecItems.m_strPath = "";
+          CLog::Log(LOGINFO, "  Success! Opening root listing.");
+        }
         // open playlists location
-        if (strDestination.Equals("$PLAYLISTS"))
+        else if (strDestination.Equals("$PLAYLISTS"))
         {
           m_vecItems.m_strPath = CUtil::VideoPlaylistsLocation();
           CLog::Log(LOGINFO, "  Success! Opening destination path: %s", m_vecItems.m_strPath.c_str());
